# pyrosm-experiments

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py
app/: app.py
docs/: conf.py
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/structure/: README.md
docs/user_guide/: README.md
notebooks/: ingest-features.ipynb  landuse-testing.ipynb  pyrosm-visualise-pbf.ipynb
pyrosm-cities-app/: 01-update-db.py  app.py  requirements.txt
pyrosm-cities-app/config/: 01-update-db.toml
pyrosm-cities-app/rsconnect-python/: my-app.json  pyrosm-cities-app.json
src/make_features/: get-buildings.py
src/pyrosmExperiments/make_features/: get_buildings.py
