[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

# `coverage` configurations
[tool.coverage.run]
source = [
    "./src"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]
omit = ["src/**/__init__.py"]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]
