[project]
name = "pyrosmExperiments"
version = "0.0.1"
authors = [
  { name="Rich Leyshon", email="leyshonrr@hotmail.co.uk" },
]
description = "A playground for working with pyrosm."
readme = "README.md"
requires-python = ">=3.9.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/r-leyshon/pyrosm-experiments"
"Bug Tracker" = "https://github.com/r-leyshon/pyrosm-experiments/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `coverage` configurations
[tool.coverage.run]
source = [
    "./src"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]
omit = ["src/**/__init__.py"]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]
