# setup.cfg file at the root directory
[metadata]
name = pyrosmExperiments
version = 0.9.9
author = Rich Leyshon
description = Experiments with pyrosm.
long_description = Extracting features from osm.pbf files with the pyrosm
    library.
url = https://github.com/r-leyshon/pyrosm-experiments
keywords = pyrosm, osm
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9.7
install_requires =
    geopandas==0.12.1
    matplotlib==3.6.2
    numpy==1.23.4
    pandas==1.5.1
    pygeos==0.13
    pyprojroot==0.2.0
    pyrosm==0.6.1
    shapely==1.8.5.post1
[options.extras_require]
test =
    pytest
    coverage
