# setup.cfg file at the root directory
[metadata]
name = pyrosmExperiments
version = 0.9.9
author = Rich Leyshon
description = Experiments with pyrosm.
long_description = Extracting features from osm.pbf files with the pyrosm
    library.
url = https://github.com/r-leyshon/pyrosm-experiments
keywords = pyrosm, osm
[options]
packages = find:
python_requires = >=3.9.7
[options.extras_require]
test =
    pytest
    coverage
[options.packages.find]
package_dir =
    = ./src
packages = find:
